--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,44 +1,36 @@
 /* The styles for the elements */
-body { 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 85%;
-    margin-left: 2em;
-    margin-right: 2em;
-    width: 400px;
-}
-h1 {     
-    font-size: 140%;
-    color: teal;
-    margin-bottom: .5em;    
-}
-h2 {     
-    font-size: 120%;
-    color: teal;
-    margin-bottom: .5em;    
-}
-label {
-    float: left;
-    width: 7em;
-    margin-bottom: 0.5em;
-    font-weight: bold;
-}
-input[type="text"], input[type="email"] {  /* An attribute selector */
-    width: 15em;
-    margin-left: 0.5em;    
-    margin-bottom: 0.5em;
-}
-span {
-    margin-left: 0.5em;    
-    margin-bottom: 0.5em;    
-}
-br {
-    clear: both;
+
+#belk {
+    display: block;
+    margin-left: auto ;
+    margin-right: auto;
+    padding-top: 1em;
 }
 
-/* The styles for the classes */
-.pad_top {
-    padding-top: 0.25em;
+#crimsonKing{
+    border: 2px solid #ff0033;
+    width: 700px;
+    margin: auto;
+    margin-bottom: 1em;
 }
-.margin_left {
-    margin-left: 0.5em;
+a{
+    display: block;
+    padding-top: 1em;
+    padding-left: 1em;
+}
+footer{
+    margin-top: 2em;
+    border-top:  2px solid #000000;
+    width: 100%;
+    margin: auto;
+    padding-top: 1em;
+    padding-left: 20%;
+    font-size: 1.2em;
+   
+}
+h2{
+    padding-left: 1em;
+}
+form{
+    padding-left: 1em;
 }
